# rauc-disk-updater

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md
data/: de.helbling.DiskUpdater.conf  de.helbling.DiskUpdater.service  rauc-disk-updater.service  rauc-disk-updater.service.in
examples/: auto_install.sh
include/: udev.h
src/: de.helbling.DiskUpdater.xml  rauc-disk-updater.c  udev.c
